# cli-4devs

./: Cargo.toml  README.md
src/: constants.rs  lib.rs  main.rs
src/generators/: cpf.rs  credit_card.rs  mod.rs  zip_code.rs
