[package]
name = "cli_4devs"
version = "0.0.1"
authors = ["PauloRSF <paulorsouzaf@gmail.com>"]
edition = "2018"

[dependencies]
regex = "1"
clap = "3.0.0-beta.2"
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1", features = ["full"] }

[[bin]]
name = "4devs"
path = "src/main.rs"
